k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeforge
  namespace: kubeforge
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubeforge
  template:
    metadata:
      labels:
        app: kubeforge
    spec:
      containers:
        - name: kubeforge
          image: kube-forge:2.0
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
