k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeforge
  namespace: kubeforge
spec:
  selector:
    app: kubeforge
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
